[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "peakusb"
version = "0.1.0"
authors = [
    { name = "PeakUSB Team" }
]
description = "Cross-platform bootable USB creation tool"
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
peakusb = "peakusb:main"
